ai-paperclip/kustomization/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: ai-paperclip
  name: ai-paperclip
